--- a/xlog-crash/src/main/res/values/dimens.xml
+++ b/xlog-crash/src/main/res/values/dimens.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <dimen name="simple_text_item_size">18sp</dimen>
+    <dimen name="xlog_crash_text_item_size">18sp</dimen>
 
 </resources>
